# presidential-elections

./: .gitignore  00_fetch_2024.py  00_process_results.py  01_fetch_population.py  02_apply_population_results.py  03_output_geofiles_maps.py  04_analyze_results.py  05_output_county_symbol_maps.py  05_output_symbol_maps.py  05_population_scatter_parties.py  07_fetch_state_results.py  08_output_state_symbol_maps.py  09_map_county_shift.py  README.md  main.py  pyproject.toml  requirements.txt
data/geo/: states.geojson
data/processed/: county_population_census_2000.json  county_population_census_2010.json  county_population_census_2020.json  election_metrics_by_year.json  presidential_county_change_2000_2020.json  presidential_county_change_2016_2020.json  presidential_county_results_2024.json  presidential_election_results_by_state.csv  presidential_election_results_by_state.json  presidential_election_results_by_state_2024.json  presidential_results_states_all.csv  presidential_results_states_all.json  presidential_results_states_swing_states.csv  presidential_results_states_swing_states.json
